<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/editWindow"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?attr/windowBackgroundColor"
  android:orientation="vertical"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  tools:context="com.nononsenseapps.feeder.ui.EditFeedActivity">

  <ScrollView
    android:id="@+id/feed_details_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <com.nononsenseapps.feeder.views.FloatLabelLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:floatErrorTextAppearance="@style/TextAppearance.ErrorLabel"
        app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

        <EditText
          android:id="@+id/feed_url"
          style="@style/TextAppearance.Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"
          android:hint="@string/url"
          android:imeOptions="actionNext"
          android:inputType="textUri"
          android:singleLine="true" />
      </com.nononsenseapps.feeder.views.FloatLabelLayout>

      <com.nononsenseapps.feeder.views.FloatLabelLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:floatErrorTextAppearance="@style/TextAppearance.ErrorLabel"
        app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

        <EditText
          android:id="@+id/feed_title"
          style="@style/TextAppearance.Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="2dp"
          android:hint="@string/title"
          android:imeOptions="actionNext"
          android:inputType="text|textAutoComplete|textAutoCorrect|textCapSentences"
          android:singleLine="true"
          android:textDirection="anyRtl" />
      </com.nononsenseapps.feeder.views.FloatLabelLayout>

      <com.nononsenseapps.feeder.views.FloatLabelLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:floatErrorTextAppearance="@style/TextAppearance.ErrorLabel"
        app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

        <AutoCompleteTextView
          android:id="@+id/feed_tag"
          style="@style/TextAppearance.Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"
          android:completionThreshold="1"
          android:hint="@string/tag"
          android:imeOptions="actionDone"
          android:inputType="text|textAutoComplete|textAutoCorrect|textCapSentences"
          android:singleLine="true"
          android:textDirection="anyRtl" />
      </com.nononsenseapps.feeder.views.FloatLabelLayout>

      <TextView
          style="@style/TextAppearance.FloatLabel"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="10dip"
          android:layout_marginBottom="5dp"
          android:text="@string/open_item_by_default_with" />

      <Spinner
          android:id="@+id/open_articles_with"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:dropDownWidth="match_parent"
          android:entries="@array/array_open_feed_article_options"
          android:spinnerMode="dropdown" />


        <CheckBox
          android:id="@+id/feed_default_full_text"
          style="@style/TextAppearance.Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="2dp"
          android:text="@string/fetch_full_articles_by_default"
          android:singleLine="true"
          android:textDirection="anyRtl" />

      <Button
        android:id="@+id/add_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/add_feed" />

    </LinearLayout>
  </ScrollView>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/feed_search_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <EditText
      android:id="@+id/search_view"
      style="@style/TextAppearance.Title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/add_feed_search_hint"
      android:imeOptions="actionGo"
      android:inputType="text|textAutoComplete|textUri"
      android:singleLine="true"
      android:textDirection="anyRtl"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/results_listview"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      android:contentDescription="@string/discovered_feeds_list"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/search_view" />

    <TextView
      android:id="@android:id/empty"
      style="@style/TextAppearance.EmptyView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="16dp"
      android:gravity="center"
      android:text="@string/search_feed_empty_hint"
      android:textDirection="anyRtl"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/search_view" />

    <ProgressBar
      android:id="@+id/loading_progress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="16dp"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/search_view" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
